--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
     <h1>About Me!</h1>
     <ul>
         <li>
-            I am a Capital Project Manager working in the Water and Wastewater Industry.
+           * I am a Capital Project Manager working in the Water and Wastewater Industry.
         </li>
         <li>
-            My education history includes multiple military trainings and professinal certifications, such as my Project Management Professional certification (PMP). 
+           * My education history includes multiple military trainings and professinal certifications, such as my Project Management Professional certification (PMP). 
             I have not completed a college degree but hope to complete this goal in the near future. 
         </li>
         <li>
-            I Live in Bellevue and currently work from home.
+           * I Live in Bellevue and currently work from home.
         </li>
         <li>
-            I served 8 years in the U.S Army as a Human Resources Specialist and got out in August of 2015. 
+           * I served 8 years in the U.S Army as a Human Resources Specialist and got out in August of 2015. 
         </li>
         <li>
-            I am a big football fan, GO PATS!
+           * I am a big football fan, GO PATS!
         </li>
         
     </ul>
